--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 <p>
 
 
-	Vasilaky, Kathryn and Kenneth Leonard, "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda" Forthcoming, <em>Economic Development and Cultural Change</em>. (<a href="target_input_model.pdf">Supplementary derivations </a> for the Target-Input model with Bayesian updating.)
+	Vasilaky, Kathryn and Kenneth Leonard, "As Good as the Networks They Keep?: Improving Outcomes through Weak Ties in Uganda" Forthcoming, <em>Economic Development and Cultural Change</em>. (<a href="target_input_model.pdf">Supplementary derivations </a> for the Target-Input model with Bayesian updating)
 	<br></br>
 	Vasilaky, Kathryn, Rahel Diro, Michael Norton, Geoff McCarnery, and Daniel Osgood, "Educational Games in Ethiopia, Scaling the Demand for Index Insurance," R&R, <em>Journal of Development Studies</em>, (2016).
 	<br></br>
@@ -68,23 +68,23 @@
 
 	Vasilaky, Kathryn and Daniel Osgood, "Informal Social Networks in Index Insurance: Randomizing Social Distance in Group Insurance," (2016), <em>Under Review.</em>
 	<br></br>
-	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures,</a>" (2016),<em> Under Review.</em>
+	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva and Kathryn Vasilaky, "<a href=http://papers.ccpr.ucla.edu/papers/PWP-MPRC-2016-005/PWP-MPRC-2016-005.pdf>Towards a Deeper Understanding of Female Competitiveness and the Gender Gap: Evidence from Patrilocal and Matrilocal Cultures using a Lab Experiment in the Field,</a>" (2016),<em> Under Review.</em>
 
 	<br></br>
 	Vasilaky, Kathryn and Asif Islam, "By Team or By Tournament? Incentives for Sharing Information in an Experimental Game," (2016),<em> Under Review.</em>
 	<br></br>
-	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness, Sibling Rivalry, and Competitiveness: Evidence from a Lab Experiment and a Randomized Control Trial in Uganda</a>," (2016),<em> Under Review</em>.
+	Buehren, Niklas and Markus P. Goldstein and Kenneth L. Leonard and Joao Montalvao and Kathryn Vasilaky, "<a href="http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2811346">Female Competitiveness and Sibling Rivalry: Evidence from a Lab Experiment and Randomized Control Trial in Uganda</a>," (2016),<em> Under Review</em>.
 	<br></br>
 
 
 	<h1>working papers</h1>
 	Vasilaky, Kathryn, "A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule," Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A194857">Working Paper</a></em>, (2016) and accompanying <a href="https://github.com/kathrynthegreat/InverseProblem">git repo</a>. 
 	<br></br>
-	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "Hierarchal Bayesian Estimation of Weather Prediction," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
+	Shirley, Kenny, Kathryn Vasilaky, Helen Greatrex, and Daniel Osgood, "A Hierarchal Bayesian Model of Weather Prediction with Multiple Tiem Series," Earth Institute, Columbia University<em>, <a href="http://academiccommons.columbia.edu/catalog/ac%3A199595">Working Paper</a> (2016)</em>.
 	<br></br>
 	Vasilaky, Kathryn, Kentaro Toyama, Tushi Baul and Dean Karlan, "Learning Digitally: Evaluating the Impact of Farmer Training via Mediated Videos?" Jameel Poverty Action Lab,<em> Working Paper, (2016)</em>, and <a href="https://www.socialscienceregistry.org/trials/313"> Social Registry Trial 313.</a>
 	<br></br>
-	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Measureing the Ipact of Timely Disaster Response in the
+	Vasilaky, Kathryn and Aurelie Harou, Chia-Ying Lee, and Daniel Osgood, "Measureing the Impact of Timely Disaster Response in the
 	Philippines using Weather Extremes," Earth Institute, Columbia University,<em> Working Paper, (2016)</em>.
 	<br></br>
 	Vasilaky, Kathryn and Michelle Brock, "Traversing the Landscape of Economic Power," European Bank for Reconstruction and Development, and Columbia University, <em><a href="http://academiccommons.columbia.edu/catalog/ac%3A196085">Working Paper</a>, (2015)</em>.
@@ -99,7 +99,7 @@
 	<br></br>
 	Vasilaky, Kathryn and Kenneth Leonard, "Improving Social Networks for Ugandan Farmers," Gender Innovation Lab Policy Brief, World Bank Report, (2016) <em><a href="http://www.worldbank.org/en/programs/africa-gender-innovation-lab/brief/improving-social-networks-for-ugandan-farmers#">Report</a></em>.
 	<br></br>
-	Vasilaky, Kathryn and Kenneth Leonard, "As good as the company they keep? : improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Research Paper 103850, (2016) <em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Report</a></em>.
+	Vasilaky, Kathryn and Kenneth Leonard, "As good as the company they keep?: Improving farmers’ social networks ," Gender Innovation Lab Policy Brief, World Bank Research Paper 103850, (2016) <em><a href="http://documents.worldbank.org/curated/en/603951468197954484/As-good-as-the-company-they-keep-improving-farmers-social-networks">Report</a></em>.
 
 
 						
