--- a/posts.html
+++ b/posts.html
@@ -58,7 +58,7 @@
 						
 <p>	
 
-Seminar Speaker, <a href="http://steinhardt.nyu.edu/priism/newsandevents/seminars"> An Iterative Approach to the Tikhanov Inverse Problem with a Stopping Rule,</a> New York University, Applied Statistics, PRIISM Seminar, scheduled 12/7/16
+Seminar Speaker, <a href="http://steinhardt.nyu.edu/priism/newsandevents/seminars"> A Generalized Ridge Regression Using an Iterative Solution: the Inverse Problem in Regression Analysis with a Stopping Rule,</a> New York University, Applied Statistics, PRIISM Seminar, scheduled 12/7/16
 <br></br>
 Workshop Speaker, <a href="merltech.org/agenda">From RCT’s to A/B: Choosing Lean Methods for Evaluation, Monitoring, Evaluation, Research and Learning in Development,</a> FHI360, Washington DC, 10/3/16
 <br></br>
