--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
 						<h1>bio</h1>
 						
 						<p>			
-						My research studies applied social science questions for economic development often with a quantitative approach (social network analysis, experimental design, bayesian modeling, and regularization). I have a BA in mathematics and economics and a PhD in agricultural and resource economics. My research topics are situated in behavioral and development economics, utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new agricultural technologies, particularly for females. My current work builds on this by testing the framing of information with regards to resource management, risk reduction and climate, some via web applicationas and information communication technologies that I've built. 
+						My research studies applied social science questions for economic development often with a quantitative approach (social network analysis, experimental design, bayesian modeling, and regularization). I have a BA in mathematics and economics and a PhD in agricultural and resource economics. My research topics are situated in behavioral and development economics, utilizing lab experiments in the field, randomized control trials (RCT), and quasi- randomized designs examining how social networks and group behavior affect the take-up of new agricultural technologies, particularly for females. My current work builds on this by testing the framing of information with regards to resource management, some via web applicationas and information communication technologies that I've built. 
 						<br></br>
 						My secondary work is in regularization methods (ridge regression) and the inverse problem that address noisy and highly correlated data or ill-conditioned design matrices, relevant to econometrics, image and sound recovery, and big data.  
 						<br></br>
-						In line with my research, I believe in making stem accessible and free in inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, a NGO aimed at closing the gender gap, and regularly host and teach workshops on programming and data science. In my spare time I am automating watering my plants with a raspberry pi and sensors. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
+						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, and regularly volunteer and teach workshops on programming and data science. In my spare time I am automating watering my plants with a raspberry pi and practicing improv. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
+						<br></br>
+						Fall 2017, I will be an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly.
 
 						</p>
 						
