--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<br></br>
 						In line with my research, I believe in making stem accessible and free in an inclusive learning environments. To this end I co-organize and teach for Pyladies NYC, have taught for Girls Who Code, and regularly volunteer and teach workshops on programming and data science. In my spare time I am automating watering my plants with a raspberry pi and practicing improv. I was also once a professional ballet dancer with <a href="https://www.sfballet.org">sfb</a>.
 						<br></br>
-						Fall 2017, I will be an Assistant Professor at the Department of Economics, Orfalea College of Business, Cal Poly.
+						In the Fall 2017, I will be an Assistant Professor in the Department of Economics, Orfalea College of Business at California Polytechnic University. 
 
 						</p>
 						
