--- a/publications.html
+++ b/publications.html
@@ -42,15 +42,15 @@
 						<h1>pages</h1>
 							
 							<div id="menu">
-								<a href="index.html" style="font-size: 12.5px;>bio</a><br />
+								<a href="index.html">bio</a><br />
 								<br></br>
-								<a href="publications.html" style="font-size: 12.5px;>publications</a><br />
+								<a href="publications.html">publications</a><br />
 								<br></br>
-								<a href="teaching.html" style="font-size: 12.5px;">teaching</a><br />
+								<a href="teaching.html">teaching</a><br />
 								<br></br>
-								<a href="field.html" style="font-size: 12.5px;>grants, field work</a><br />
+								<a href="field.html">grants, field work</a><br />
 								<br></br>
-								<a href="posts.html" style="font-size: 12.5px;>seminars</a><br />
+								<a href="posts.html">seminars</a><br />
 								<br></br>
 	
 								<a href="cv.html" style="font-size: 12.5px;>cv</a><br />
