--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@
 							<div id="menu">
 								<a href="index.html">bio</a><br />
 								<br></br>
-								<a href="publications.html">publications</a><br />
+								<a href="publications.html"style="font-size: 12.5px;">publications</a><br />
 								<br></br>
 								<a href="research.html">research</a><br />
 								<br></br>
@@ -72,7 +72,7 @@
 	<br></br>
 	Flory, Jeffrey, Kenneth Leonard, Magda Tsaneva, Kathryn Vasilaky, <a href="https://authors.elsevier.com/sd/article/S0167-2681(23)00377-3">How social structure shapes female competition throughout her lifetime</a> (2023) <em> Journal of Economic Behavior and Organization, 216, 433-456</em>.
 	<br></br>
-	Vasilaky, Kathryn and Harou, Aurelie, and Alfredo, Katherine and Kapur, Ishita. <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management, 119, 102802</em><em></em>. <a href= https://youtu.be/SCgRFqlZS0w>Video w/ Interviews</a>
+	Vasilaky, Kathryn and Aurelie Harou, Katherine Alfredo, Ishita Kapur <a href= https://authors.elsevier.com/sd/article/S0095-0696(23)00020-7>What works for water conservation? Evidence from a field experiment in India</a>, (2023) <em>Journal of Environmental Economics and Management, 119, 102802</em><em></em>. <a href= https://youtu.be/SCgRFqlZS0w>Video w/ Interviews</a>
 	<br></br>
 
 	<br></br>
