--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
 		
 		<div id="container">
 			<p>
-<!-- 				<a href="#"><img src="images/header2.png" alt="" border="0" title=""  /></a><br /> -->
+<!-- 				<a href="#"><img src="images/header2.png" style = "width:100;height:100;" alt="" border="0" title=""  /></a><br /> -->
 			</p>
 		
 		<div >
@@ -44,7 +44,7 @@
 							<div id="menu">
 								<a href="index.html">bio</a><br />
 								<br></br>
-								<a href="publications.html"style="font-size: 12.5px;">publications</a><br />
+								<a href="publications.html"style="font-size: 14.5px;">publications</a><br />
 								<br></br>
 								<a href="research.html">research</a><br />
 								<br></br>
