--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
 		
 		<div id="container">
 			<p>
-				<a href="#"><img src="images/header2.png" alt="" border="0" title=""  /></a><br />
+<!-- 				<a href="#"><img src="images/header2.png" style = "width:100;height:100;" alt="" border="0" title=""  /></a><br /> -->
 			</p>
 		
 		<div >
@@ -35,23 +35,22 @@
 							<div id="menu">
 								<a href="index.html">bio</a><br />
 								<br></br>
-								<a href="publications.html">publications</a><br />
+								<a href="publications.html"style="font-size: 14.5px;">publications</a><br />
 								<br></br>
-								<a href="research.html">research</a><br />
+								<a href="research.html" "style="font-size: 14.5px;">research</a><br />
 								<br></br>
-								<a href="teaching.html">teaching</a><br />
+								<a href="teaching.html" "style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
-								<a href="field.html">grants, field work</a><br />
+								<a href="field.html" "style="font-size: 14.5px;">grants, field work</a><br />
 								<br></br>
-								<a href="posts.html">seminars</a><br />
+								<a href="posts.html" "style="font-size: 14.5px;">seminars</a><br />
 								<br></br>
 
-								<a href="cv.html">cv</a><br />
+								<a href="cv.html" "style="font-size: 14.5px;">cv</a><br />
 
 				 			 </div>
 						
 						</div>
-
 
 
 <div id="content">
