--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
 		
 		<div id="container">
 			<p>
-<!-- 				<a href="#"><img src="images/header2.png" style = "width:100;height:100;" alt="" border="0" title=""  /></a><br /> -->
+				<a href="#"><img src="images/header2.png" style = "width:100;height:100;" alt="" border="0" title=""  /></a><br />
 			</p>
 		
 		<div >
@@ -44,13 +44,13 @@
 							<div id="menu">
 								<a href="index.html">bio</a><br />
 								<br></br>
-								<a href="publications.html"style="font-size: 14.5px;">publications</a><br />
+								<a href="publications.html" style="font-size: 14.5px;">publications</a><br />
 								<br></br>
-								<a href="teaching.html" "style="font-size: 14.5px;">teaching</a><br />
+								<a href="teaching.html" style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
-								<a href="field.html" "style="font-size: 14.5px;">grants, field work</a><br />
+								<a href="field.html" style="font-size: 14.5px;">grants, field work</a><br />
 								<br></br>
-								<a href="posts.html" "style="font-size: 14.5px;">seminars</a><br />
+								<a href="posts.html" style="font-size: 14.5px;">seminars</a><br />
 								<br></br>
 
 								<a href="cv.html" "style="font-size: 14.5px;">cv</a><br />
