--- a/teaching.html
+++ b/teaching.html
@@ -43,16 +43,15 @@
 							<div id="menu">
 								<a href="index.html">bio</a><br />
 								<br></br>
-								<a href="publications.html"style="font-size: 14.5px;">publications</a><br />
+								<a href="publications.html" style="font-size: 14.5px;">publications</a><br />
 								<br></br>
-								<a href="teaching.html" "style="font-size: 14.5px;">teaching</a><br />
+								<a href="teaching.html" style="font-size: 14.5px;">teaching</a><br />
 								<br></br>
-								<a href="field.html" "style="font-size: 14.5px;">grants, field work</a><br />
+								<a href="field.html" style="font-size: 14.5px;">grants, field work</a><br />
 								<br></br>
-								<a href="posts.html" "style="font-size: 14.5px;">seminars</a><br />
+								<a href="posts.html" style="font-size: 14.5px;">seminars</a><br />
 								<br></br>
-
-								<a href="cv.html" "style="font-size: 14.5px;">cv</a><br />
+								<a href="cv.html" style="font-size: 14.5px;">cv</a><br />
 
 				 			 </div>
 						
