--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<a href="posts.html" style="font-size: 14.5px;">seminars</a><br />
 								<br></br>
 	
-								<a href="cv.html">cv</a><br />
+								<a href="cv.html" style="font-size: 14.5px;">cv</a><br />
 				 			 </div>
 							 
 						
