--- a/publications.html
+++ b/publications.html
@@ -111,8 +111,10 @@
 
 	
 	<br></br>
-	<a href="https://blogs.worldbank.org/water/what-works-water-conservation-insights-study-haryana-india">World Bank Post on our work in Haryana, India on water saving techniques</a><strong></strong> on our randomized controlled trial conducted with Digital Green and the support of BMGF .
+	<a href="https://blogs.worldbank.org/water/what-works-water-conservation-insights-study-haryana-india">World Bank Post</a><strong></strong> on our work in Haryana, India on water saving techniques.
+	<br></br>
 	<a href="https://twitter.com/digitalgreenorg/status/1308641976732938240">An interview with the Bill and Melinda Gates Foundation</a><strong></strong> on our randomized controlled trial conducted with Digital Green and the support of BMGF.
+	<br></br>
 	<a href="http://iri.columbia.edu/news/video-what-tools-do-honduran-farmers-want-for-climate-risk/">Field video</a><strong></strong> from International Research Institute, Columbia University on Micro Insurance in Honduras.
 	<br></br>
 	A <a href="http://blogs.worldbank.org/impactevaluations/increasing-prosperity-poorest-using-social-networks-guest-post-kathryn-vasilaky">guest blog post</a> for the World Bank on social networks and economic prosperity.
