--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		
 		<div id="container">
 			<p>
-				<img src="oblychya.jpeg" style = "width:100;height:100;" alt="" border="0" title=""  /><br />
+				<img src="oblychya2.jpeg" style = "width:100;height:100;" alt="" border="0" title=""  /><br />
 			</p>
 		
 		<div >
